# lino

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  Readme.md  TODO.md
src/: __lino__bkp__.rs  lino.rs  main.rs  test_file.txt
src/lino/: _render.bkp.rs  commands.rs  cursor.rs  edit.rs  errors.rs  exit.rs  file.rs  file_io.rs  find.rs  frames.rs  guide.rs  handle.rs  highlight.rs  history.rs  init.rs  keybindings.rs  mod.rs  operations.rs  render.rs  replace.rs  save.rs  selection.rs  task_feedback.rs  transform.rs  util.rs
src/lino/_graveyard/: _handle.bkp.rs  _render.bkp.rs
src/lino/confirmation_dialog/: handle.rs  mod.rs  render.rs
src/lino/confirmation_prompt/: handle.rs  mod.rs  render.rs
src/lino/input_dialog/: handle.rs  mod.rs  render.rs
src/lino/input_prompt/: handle.rs  mod.rs  render.rs
