[package]
name = "lino"
version = "0.4.8"
authors = ["ahmednooor <ahmednooorr@gmail.com>"]
description = "A command line text editor with notepad like key bindings."
keywords = ["notepad-like", "terminal", "command-line", "text", "editor"]
categories = ["command-line-utilities", "development-tools", "text-editors"]
repository = "https://github.com/ahmednooor/lino"
homepage = "https://github.com/ahmednooor/lino"
readme = "README.md"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossterm = "0.18.2"
crossterm = "0.19.0"
ctrlc = "3.1.7"
copypasta = "0.7.1"
#clipboard = "0.5.0"
#syntect = "4.5.0"
syntect = { version = "4.5.0", default-features = false, features = ["default-onig"]}
